# beatmap-mirror

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: config.rs  lib.rs  main.rs
src/api/: error.rs  mod.rs
src/api/routes/: downloads.rs  mod.rs
src/api/routes/v1/: beatmaps.rs  beatmapsets.rs
src/api/routes/v2/: beatmaps.rs  beatmapsets.rs  mod.rs
src/crawler/: mod.rs
src/helpers/: elastic.rs
src/models/: beatmap.rs  beatmapset.rs  mod.rs  mode.rs  ranked_status.rs
src/models/cheesegull/: beatmap.rs  beatmapset.rs  mod.rs
src/repositories/: beatmaps.rs  beatmapsets.rs  mod.rs
src/repositories/osu/: beatmaps.rs  beatmapsets.rs  mod.rs
src/updater/: mod.rs
src/usecases/: beatmaps.rs  beatmapsets.rs  mod.rs
