[package]
name = "beatmap-mirror"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["tsunyoku <tsunyoku@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
clap = { version = "3.0.0-beta.5", features = ["derive", "env"] }
elasticsearch = "8.4.0-alpha.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.86"
env_logger = "0.9.0"
anyhow = "1.0.48"
log = "0.4.14"
elasticsearch-dsl = "0.4"
rosu-v2 = "0.5.0"
chrono = "0.4.22"
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["trace"] }
axum = { version = "0.3.4", features = ["tower-log"] }
thiserror = "1.0.30"
futures = "0.3.25"
utoipa = { version = "2.0.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "2.0.1", features = ["axum"] }
axum-core = "0.2.9"
num-traits = "0.2"
num-derive = "0.2"
reqwest = "0.11.12"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"